fixed goo filter on safari

--- a/style.sass
+++ b/style.sass
@@ -38,7 +38,7 @@ main
     height: 100%
 
     .map
-        filter: url(#goo-filter) drop-shadow(0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.4))
+        // filter: url(#goo-filter) drop-shadow(0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.4))
         .tile
             fill: rgb(244, 187, 187)
 
